# labeler

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  Makefile  Pipfile  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.py  tbump.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
labeler/: __init__.py  __version__.py  label_format.py  label_formats.py  label_sheet.py  label_sheets.py  label_size.py  label_sizes.py  paper_size.py  paper_sizes.py
tests/: test_labeler.py
