[tool.poetry]
name = "labeler"
version = "0.1.0"
description = "Easily create PDF documents for printing on label paper"
authors = ["Luke Shiner <luke@lukeshiner.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/lukeshiner/labeler"
repository = "https://github.com/lukeshiner/labeler"

classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Topic :: Utilities",
    "Topic :: Other/Nonlisted Topic",
]

[tool.poetry.dependencies]
python = "^3.6.2,<4.0"
reportlab = "^3.6.3"
pylabels = "^1.2.1"


[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
tox = "^3.24.5"
flake8 = "^4.0.1"
black = "^21.12b0"
pytest-cov = "^3.0.0"
coveralls = "^3.3.1"
isort = "^5.10.1"
flake8-docstrings = "^1.6.0"


[build-system]
requires = ["poetry>=0.12",]
build-backend = "poetry.masonry.api"

