[tool.poetry]
name = "labeler"
version = "0.1.1"
description = "Easily create PDF documents for printing on label paper"
authors = ["Luke Shiner <luke@lukeshiner.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/lukeshiner/labeler"
repository = "https://github.com/lukeshiner/labeler"

classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Topic :: Utilities",
    "Topic :: Other/Nonlisted Topic",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
reportlab = ">=3.6.8"
pylabels = ">=1.2.1"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.1"
flake8 = ">=5.0.4"
black = ">=22.6"
pytest-cov = ">=3.0.0"
isort = ">=5.10.1"
flake8-docstrings = ">=1.6.0"
flake8-bugbear = ">=24.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

